# serializer version: 1
# name: TestHammingEntityMetric.test_call_different_entities_same_sequence[event]
  1.0
# ---
# name: TestHammingEntityMetric.test_call_different_entities_same_sequence[interval]
  1.0
# ---
# name: TestHammingEntityMetric.test_call_different_entities_same_sequence[state]
  1.0
# ---
# name: TestHammingEntityMetric.test_call_with_cost_dict[event]
  0.5
# ---
# name: TestHammingEntityMetric.test_call_with_cost_dict[interval]
  0.5
# ---
# name: TestHammingEntityMetric.test_call_with_cost_dict[state]
  0.5
# ---
# name: TestHammingEntityMetric.test_call_with_default_value[event]
  0.75
# ---
# name: TestHammingEntityMetric.test_call_with_default_value[interval]
  0.75
# ---
# name: TestHammingEntityMetric.test_call_with_default_value[state]
  0.75
# ---
# name: TestHammingEntityMetric.test_call_with_explicit_features[event]
  1.0
# ---
# name: TestHammingEntityMetric.test_call_with_explicit_features[interval]
  1.0
# ---
# name: TestHammingEntityMetric.test_call_with_explicit_features[state]
  0.0
# ---
